@@ -22,17 +22,17 @@ import org.jackhuang.hmcl.util.Lang;
 
 import java.io.IOException;
 import java.util.*;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
 
-/**
- * The managed process.
- *
- * @author huangyuhui
- * @see org.jackhuang.hmcl.launch.ExitWaiter
- * @see org.jackhuang.hmcl.launch.StreamPump
- */
+/// The managed process.
+///
+/// @author huangyuhui
+/// <!-- @see org.jackhuang.hmcl.launch.ExitWaiter -->
+/// @see org.jackhuang.hmcl.launch.StreamPump
 public final class ManagedProcess {
+    private final ReentrantLock lock = new ReentrantLock();
     private final Process process;
     private final List<String> commands;
     private final String classpath;
@@ -54,7 +54,7 @@ public final class ManagedProcess {
      */
     public ManagedProcess(Process process, List<String> commands) {
         this.process = process;
-        this.commands = Collections.unmodifiableList(new ArrayList<>(commands));
+        this.commands = List.copyOf(commands);
         this.classpath = null;
     }
 
@@ -67,7 +67,7 @@ public final class ManagedProcess {
      */
     public ManagedProcess(Process process, List<String> commands, String classpath) {
         this.process = process;
-        this.commands = Collections.unmodifiableList(new ArrayList<>(commands));
+        this.commands = List.copyOf(commands);
         this.classpath = classpath;
     }
 
@@ -111,20 +111,30 @@ public final class ManagedProcess {
      *
      * @see #addLine
      */
-    public synchronized List<String> getLines(Predicate<String> lineFilter) {
-        if (lineFilter == null)
-            return Collections.unmodifiableList(Arrays.asList(lines.toArray(new String[0])));
+    public List<String> getLines(Predicate<String> lineFilter) {
+        lock.lock();
+        try {
+            if (lineFilter == null)
+                return List.copyOf(lines);
 
-        ArrayList<String> res = new ArrayList<>();
-        for (String line : this.lines) {
-            if (lineFilter.test(line))
-                res.add(line);
+            ArrayList<String> res = new ArrayList<>();
+            for (String line : this.lines) {
+                if (lineFilter.test(line))
+                    res.add(line);
+            }
+            return Collections.unmodifiableList(res);
+        } finally {
+            lock.unlock();
         }
-        return Collections.unmodifiableList(res);
     }
 
-    public synchronized void addLine(String line) {
-        lines.add(line);
+    public void addLine(String line) {
+        lock.lock();
+        try {
+            lines.add(line);
+        } finally {
+            lock.unlock();
+        }
     }
 
     /**
@@ -133,15 +143,20 @@ public final class ManagedProcess {
      * If a thread is monitoring this raw process,
      * you are required to add the instance by this method.
      */
-    public synchronized void addRelatedThread(Thread thread) {
-        relatedThreads.add(thread);
+    public void addRelatedThread(Thread thread) {
+        lock.lock();
+        try {
+            relatedThreads.add(thread);
+        } finally {
+            lock.unlock();
+        }
     }
 
-    public synchronized void pumpInputStream(Consumer<String> onLogLine) {
+    public void pumpInputStream(Consumer<String> onLogLine) {
         addRelatedThread(Lang.thread(new StreamPump(process.getInputStream(), onLogLine, OperatingSystem.NATIVE_CHARSET), "ProcessInputStreamPump", true));
     }
 
-    public synchronized void pumpErrorStream(Consumer<String> onLogLine) {
+    public void pumpErrorStream(Consumer<String> onLogLine) {
         addRelatedThread(Lang.thread(new StreamPump(process.getErrorStream(), onLogLine, OperatingSystem.NATIVE_CHARSET), "ProcessErrorStreamPump", true));
     }
 
@@ -172,8 +187,13 @@ public final class ManagedProcess {
         destroyRelatedThreads();
     }
 
-    public synchronized void destroyRelatedThreads() {
-        relatedThreads.forEach(Thread::interrupt);
+    public void destroyRelatedThreads() {
+        lock.lock();
+        try {
+            relatedThreads.forEach(Thread::interrupt);
+        } finally {
+            lock.unlock();
+        }
     }
 
     @Override
